# njt

./: .gitignore  build.gradle  pom.xml  settings.gradle
java-lib/: pom.xml
java-lib/com/eternal_search/njt/: KeyCode.java  Main.java  PlatformInfo.java
java-lib/src/main/java/com/eternal_search/njt/: Main.java  NativeFunctions.java  PlatformInfo.java  Window.java
java-lib/src/main/java/com/eternal_search/njt/geom/: Point.java  Rect.java
native-lib/: CMakeLists.txt  pom.xml
native-lib/cmake/: FindX11_XCB.cmake
native-lib/crosscompile/: CMakeLists.txt
native-lib/src/: main.c
native-lib/toolchains/: linux-x86.cmake  linux-x86_64.cmake  windows-x86.cmake  windows-x86_64.cmake
